--- a/app/src/main/res/layout/item_error_message.xml
+++ b/app/src/main/res/layout/item_error_message.xml
@@ -17,7 +17,7 @@
             android:layout_margin="16dp"
             android:layout_weight="2"
             android:gravity="center_horizontal"
-            android:text="@string/error_msg"
+            android:text="@string/msg_failed_to_connect"
             android:textAlignment="center" />
 
         <Button
